# carebridge-ai

./: .env.example  .gitignore  README-Portfolio.md  README.md  start.bat  start.py  start.sh
.claude/: launch.json
backend/: pyproject.toml  requirements-portfolio.txt
backend/app/: config.py  main.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py
backend/app/conversations/: generator.py  models.py  router.py  schemas.py
backend/app/core/: database.py  exceptions.py  security.py
backend/app/portfolio/: __init__.py
backend/app/portfolio/analysis/: __init__.py  ai_insights.py  fundamentals.py  risk.py  technical.py
backend/app/portfolio/api/: __init__.py  routes.py
backend/app/portfolio/models/: __init__.py  database.py  schemas.py
backend/app/portfolio/services/: __init__.py  cache_manager.py  rate_limiter.py  yfinance_client.py
backend/tests/: test_technical.py
docs/plans/: 2026-03-07-carebridge-mvp-design.md  2026-03-07-carebridge-mvp-implementation.md  2026-03-12-mvp-demo-completion-design.md  2026-03-12-mvp-demo-completion.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: AIInsightsPanel.tsx  AppHeader.tsx  CommunicationScorecard.tsx  Dashboard.tsx  FundamentalPanel.tsx  PriceChart.tsx  RiskPanel.tsx  RiskTimeline.tsx  SymbolSearch.tsx  TechnicalPanel.tsx  WizardProgress.tsx  index.ts
frontend/src/hooks/: index.ts  useAuth.ts  useConversation.ts  usePortfolio.ts  useTheme.ts
(+18 files in other folders)
